--- a/cwf/gateway/docker/python/Dockerfile
+++ b/cwf/gateway/docker/python/Dockerfile
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # Builder image for Magma proto files
 # -----------------------------------------------------------------------------
-FROM ubuntu:bionic AS builder
+FROM ubuntu:focal AS builder
 
 # Install the runtime deps from apt.
 RUN apt-get -y update && apt-get -y install curl make virtualenv zip \
@@ -16,9 +16,9 @@ RUN curl -Lfs https://github.com/google/protobuf/releases/download/v3.1.0/protoc
   chmod -R a+Xr /usr/include/google && \
   rm -rf protoc3.zip protoc3
 
-# Install python3.5 since it's not native on bionic
+# Install python3.8 since it's not native on focal
 RUN apt-add-repository "ppa:deadsnakes/ppa"
-RUN apt-get -y update && apt-get -y install python3.5
+RUN apt-get -y update && apt-get -y install python3.8
 
 ENV MAGMA_ROOT /magma
 ENV PYTHON_BUILD /build/python
@@ -39,7 +39,10 @@ RUN make -C $MAGMA_ROOT/orc8r/gateway/python protos
 # -----------------------------------------------------------------------------
 # Dev/Production image
 # -----------------------------------------------------------------------------
-FROM ubuntu:bionic AS lte_gateway_python
+FROM ubuntu:focal AS lte_gateway_python
+
+# workaround to avoid interactive tzdata configuration
+ARG DEBIAN_FRONTEND=noninteractive
 
 # Add the magma apt repo
 RUN apt-get update && \
@@ -50,9 +53,9 @@ RUN apt-key add /tmp/jfrog.pub && \
     apt-add-repository "deb https://facebookconnectivity.jfrog.io/artifactory/list/dev/ bionic main" && \
     apt-add-repository "deb http://archive.ubuntu.com/ubuntu/ bionic-proposed restricted main multiverse universe"
 
- # Install python3.5 since it's not native on bionic
+ # Install python3.8 since it's not native on focal
 RUN apt-add-repository "ppa:deadsnakes/ppa"
-RUN apt-get -y update && apt-get -y install python3.5
+RUN apt-get -y update && apt-get -y install python3.8
 
 RUN apt-get -y update && apt-get -y install \
     curl \
@@ -60,7 +63,7 @@ RUN apt-get -y update && apt-get -y install \
     libev4 \
     libffi-dev \
     libjansson4 \
-    libjemalloc1 \
+    libjemalloc2 \
     libssl-dev \
     libsystemd-dev \
     magma-nghttpx=1.31.1-1 \
@@ -81,7 +84,7 @@ RUN apt-get -y update && apt-get -y install \
     netcat \
     iputils-ping
 
-RUN python3.5 -m pip install --no-cache-dir \
+RUN python3.8 -m pip install --no-cache-dir \
     Cython \
     fire \
     envoy \
@@ -137,11 +140,11 @@ RUN make install
 
 # Install orc8r python (magma.common required for lte python)
 COPY orc8r/gateway/python /tmp/orc8r
-RUN python3.5 -m pip install --no-cache-dir /tmp/orc8r
+RUN python3.8 -m pip install --no-cache-dir /tmp/orc8r
 
 # Install lte python
 COPY lte/gateway/python /tmp/lte
-RUN python3.5 -m pip install --no-cache-dir /tmp/lte
+RUN python3.8 -m pip install --no-cache-dir /tmp/lte
 
 # Copy the configs.
 COPY lte/gateway/configs /etc/magma
