--- a/feg/gateway/docker/.env
+++ b/feg/gateway/docker/.env
@@ -25,4 +25,4 @@ CONFIGS_TEMPLATES_PATH=../../../orc8r/gateway/configs/templates
 CERTS_VOLUME=gwcerts
 CONFIGS_VOLUME=gwconfigs
 
-LOG_DRIVER=json-file
+LOG_DRIVER=journald
