--- a/lte/gateway/configs/templates/mme.conf.template
+++ b/lte/gateway/configs/templates/mme.conf.template
@@ -92,6 +92,13 @@ MME :
          {% endfor %}
     );
 
+    # List of restricted PLMNs
+    # By default this list is empty
+    RESTRICTED_PLMN_LIST = (
+         # Sample plmn
+         #{ MCC="001" ; MNC="010";}
+    );
+
     CSFB :
     {
         NON_EPS_SERVICE_CONTROL = "{{ non_eps_service_control }}";
