--- a/feg/cloud/helm/feg-orc8r/templates/s8_proxy.service.yml
+++ b/feg/cloud/helm/feg-orc8r/templates/s8_proxy.service.yml
@@ -11,16 +11,16 @@
 # limitations under the License.
 */}}
 
-{{- include "orc8rlib.service" (list . "feg_hello.service") -}}
-{{- define "feg_hello.service" -}}
+{{- include "orc8rlib.service" (list . "s8_proxy.service") -}}
+{{- define "s8_proxy.service" -}}
 metadata:
-  name: orc8r-feg-hello
+  name: orc8r-s8-proxy
   labels:
 {{ include "feg-proxy-alias-labels" . | indent 4 }}
-    {{- with .Values.feg_hello.service.labels }}
+    {{- with .Values.s8_proxy.service.labels }}
 {{ toYaml . | indent 4}}
     {{- end}}
-  {{- with .Values.feg_hello.service.annotations }}
+  {{- with .Values.s8_proxy.service.annotations }}
   annotations:
 {{ toYaml . | indent 4}}
   {{- end }}
