--- a/lte/gateway/deploy/roles/ovs_deploy/tasks/main.yml
+++ b/lte/gateway/deploy/roles/ovs_deploy/tasks/main.yml
@@ -62,11 +62,16 @@
     packages:
       - graphviz
       - python-all
-      - python-twisted-conch
       - module-assistant
       - openssl
       - dkms
       - uuid-runtime
+
+- name: Install python-twisted-conch (not available for ubuntu focal)
+  when: ansible_distribution_release != 'focal'
+  apt:
+    pkg:
+      - python-twisted-conch
 
 - name: Build openvswitch packages
   when: not ovs_use_pkgrepo
@@ -111,12 +116,17 @@
   become: yes
   apt:
     name:
-      - oai-gtp
       - libopenvswitch
       - openvswitch-datapath-dkms
       - openvswitch-datapath-source
       - openvswitch-common
       - openvswitch-switch
+
+- name: Install oai-gtp (not needed for ubuntu focal)
+  when: ansible_distribution_release != 'focal'
+  apt:
+    pkg:
+      - oai-gtp
 
 - name: Preconfigure wireshark (tshark) SUID property
   become: yes
