[circleci][deploy-latest] adding docker image used by xwf-m to be tagged with latest too
Signed-off-by: Ayelet Regev Dabah <ayelet.regev@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1067,7 +1067,7 @@ workflows:
             - xwfm-test
             - cwag-precommit
             - cwf-integ-test
-          images: 'gateway_python|gateway_pipelined'
+          images: 'gateway_python|gateway_pipelined|gateway_go'
           tag: 'latest'
       - xwfm-deploy:
           <<: *only_master
