--- a/lte/gateway/configs/pipelined.yml
+++ b/lte/gateway/configs/pipelined.yml
@@ -159,6 +159,9 @@ uplink_gw_mac: 'ff:ff:ff:ff:ff:ff'
 ovs_gtp_stats_polling_interval: 180
 
 he_proxy_eth_mac: 'e6:8f:a2:80:80:80'
+
+ovs_multi_tunnel: True
+
 # For 5G Functionality Support flag
 5G_feature_set:
  enable: False
