--- a/orc8r/cloud/configs/service_registry.yml
+++ b/orc8r/cloud/configs/service_registry.yml
@@ -16,6 +16,11 @@
 # proxy_aliases refers to proxy config when a service might have more than one
 # port. Example in magma/feg/cloud/configs/service_registry.yml
 
+# poll_frequency sets how frequently the service registry service should reach
+# out to the kube-apiserver to refresh its cache of tracked services.
+# Ref: https://pkg.go.dev/github.com/robfig/cron#hdr-CRON_Expression_Format
+poll_frequency: "@every 30s"
+
 services:
   analytics:
     host: "localhost"
