--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ executors:
 
 orbs:
   artifactory: circleci/artifactory@0.0.7
+  codecov: codecov/codecov@1.1.3
 
   python:
     commands:
@@ -488,6 +489,7 @@ jobs:
       - magma_slack_notify
 
   # Fail if code doesn't pass formatting requirements.
+  # Upload test coverage statistics.
   cloud_lint:
     machine:
       image: ubuntu-1604:201903-01
@@ -498,12 +500,20 @@ jobs:
       - checkout
       - build/determinator:
           <<: *all_gateways_build_verify
+      - docker/install-dc
       - python/set_version
       - run:
           name: Lint cloud Go code
           command: |
             cd ${MAGMA_ROOT}/orc8r/cloud/docker
             python3 build.py --lint
+      - run:
+          name: Generate test coverage
+          command: |
+            cd ${MAGMA_ROOT}/orc8r/cloud/docker
+            python3 build.py --coverage
+      - codecov/upload:
+          file: /home/circleci/project/orc8r/cloud/coverage/all.gocov
       - magma_slack_notify
 
   # Fail if checked-in generated code doesn't match output from
