--- a/orc8r/cloud/go/Makefile
+++ b/orc8r/cloud/go/Makefile
@@ -6,7 +6,9 @@ TOOL_DEPS:= \
 	github.com/facebookincubator/ent/cmd/entc \
 	github.com/go-swagger/go-swagger/cmd/swagger \
 	github.com/golang/protobuf/protoc-gen-go \
-	github.com/vektra/mockery/cmd/mockery
+	github.com/ory/go-acc \
+	github.com/vektra/mockery/cmd/mockery \
+	github.com/wadey/gocovmerge
 include $(MAGMA_ROOT)/orc8r/cloud/go/module.mk
 
 LIB_ROOT=$(MAGMA_ROOT)/orc8r/lib/go
