--- a/feg/gateway/docker/docker-compose.yml
+++ b/feg/gateway/docker/docker-compose.yml
@@ -102,6 +102,11 @@ services:
     container_name: s6a_proxy
     command: envdir /var/opt/magma/envdir /var/opt/magma/bin/s6a_proxy -logtostderr=true -v=0
 
+  s8_proxy:
+    <<: *goservice
+    container_name: s8_proxy
+    command: envdir /var/opt/magma/envdir /var/opt/magma/bin/s8_proxy -logtostderr=true -v=0
+
   radiusd:
     <<: *goservice
     container_name: radiusd
