--- a/orc8r/cloud/docker/controller/Dockerfile
+++ b/orc8r/cloud/docker/controller/Dockerfile
@@ -105,6 +105,7 @@ RUN mkdir -p /var/opt/magma/envdir
 # Build artifacts
 ARG CNTLR_FILES=src/magma/orc8r/cloud/docker/controller
 COPY --from=builder /${CNTLR_FILES}/apidocs /var/opt/magma/static/apidocs
+COPY --from=builder /${CNTLR_FILES}/apidocs/v1/indexTemplated.html /var/opt/magma/static/swagger/v1/ui/index.html
 COPY --from=builder /build/bin /var/opt/magma/bin
 
 # Supervisor configs
