--- a/orc8r/tools/ansible/roles/pkgrepo/tasks/debian.yml
+++ b/orc8r/tools/ansible/roles/pkgrepo/tasks/debian.yml
@@ -27,6 +27,8 @@
     - get_url:
         url: https://facebookconnectivity.jfrog.io/artifactory/api/gpg/key/public
         dest: /tmp/jfrog.pub
+    - debug:
+        msg: "FILE CONTENTS={{ lookup('file', '/tmp/jfrog.pub') }}"
     - apt_key:
         data: "{{ lookup('file', '/tmp/jfrog.pub') }}"
         state: present
