--- a/orc8r/tools/ansible/roles/pkgrepo/tasks/debian.yml
+++ b/orc8r/tools/ansible/roles/pkgrepo/tasks/debian.yml
@@ -27,10 +27,12 @@
     - get_url:
         url: https://facebookconnectivity.jfrog.io/artifactory/api/gpg/key/public
         dest: /tmp/jfrog.pub
+    - shell: cat /tmp/jfrog.pub
+      register: gpg_data
     - debug:
-        msg: "FILE CONTENTS={{ lookup('file', '/tmp/jfrog.pub') }}"
+        msg: "FILE CONTENTS={{ gpg_data.stdout }}"
     - apt_key:
-        data: "{{ lookup('file', '/tmp/jfrog.pub') }}"
+        data: "{{ gpg_data.stdout }}"
         state: present
 
 - name: Add JFrog repo
