--- a/orc8r/tools/ansible/roles/pkgrepo/tasks/debian.yml
+++ b/orc8r/tools/ansible/roles/pkgrepo/tasks/debian.yml
@@ -23,15 +23,9 @@
   #  when: preburn
 
 - name: Add JFrog key
-  block:
-    - get_url:
-        url: https://facebookconnectivity.jfrog.io/artifactory/api/gpg/key/public
-        dest: /tmp/jfrog.pub
-    - shell: cat /tmp/jfrog.pub
-      register: gpg_data
-    - apt_key:
-        data: "{{ gpg_data.stdout }}"
-        state: present
+  apt_key:
+    url: https://facebookconnectivity.jfrog.io/artifactory/api/gpg/key/public
+    state: present
 
 - name: Add JFrog repo
   apt_repository:
