--- a/wifi/cloud/helm/wifi-orc8r/values.yaml
+++ b/wifi/cloud/helm/wifi-orc8r/values.yaml
@@ -41,7 +41,7 @@ controller:
       user: postgres
       pass: postgres
     service_registry:
-      mode: "yaml"
+      mode: "k8s"
 
   podAnnotations: {}
 
