--- a/orc8r/cloud/docker/controller/Dockerfile
+++ b/orc8r/cloud/docker/controller/Dockerfile
@@ -103,13 +103,13 @@ COPY src/magma/orc8r/cloud/docker/wait-for-it.sh /usr/local/bin
 RUN mkdir -p /var/opt/magma/envdir
 
 # Build artifacts
-ARG CNTLR_FILES=src/magma/orc8r/cloud/docker/controller
-COPY --from=builder /${CNTLR_FILES}/apidocs /var/opt/magma/static/apidocs
-COPY --from=builder /${CNTLR_FILES}/apidocs/v1/index.html /var/opt/magma/static/swagger/v1/ui/index.html
-COPY --from=builder /${CNTLR_FILES}/apidocs/v1/swagger.yml /var/opt/magma/static/swagger/v1/spec/swagger.yml
+ARG SWAGGER_FILES=src/magma/orc8r/cloud/go/obsidian/swagger
+COPY --from=builder /${SWAGGER_FILES}/v1/index.html /var/opt/magma/static/swagger/v1/ui/index.html
+COPY --from=builder /${SWAGGER_FILES}/v1/swagger.yml /var/opt/magma/static/swagger/v1/spec/swagger.yml
 COPY --from=builder /build/bin /var/opt/magma/bin
 
 # Supervisor configs
+ARG CNTLR_FILES=src/magma/orc8r/cloud/docker/controller
 COPY ${CNTLR_FILES}/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 COPY ${CNTLR_FILES}/supervisor_logger.py /usr/local/lib/python2.7/dist-packages/supervisor_logger.py
 
