--- a/experimental/cloudstrapper/playbooks/roles/vars/cluster.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/vars/cluster.yaml
@@ -4,17 +4,17 @@
 #Use them to customize each deployment
 #------------------
 #Orc8r deployment variables
-orc8rClusterName: Seoul
-orc8rDomainName: arun.fbmagma.ninja
-orc8rLabel: 1.3.0
-orc8rVersion: v1.3
-gitHelmRepo: helm13
+orc8rClusterName: Sydney
+orc8rDomainName: bbbath.fbmagma.ninja
+orc8rLabel: 1.4.0
+orc8rVersion: v1.4
+gitHelmRepo: helm14
 #Ex: If the repo is avaialble from https://github.com/<username>/helm13.git, use the repo name for gitHelmRepo
 
 #AWS variables
 awsBootKey: "{{ keyBoot }}"
 awsHostKey: "{{ keyHost }}"
-awsAgwRegion: ca-central-1
+awsAgwRegion: ap-northeast-1
 awsOrc8rRegion: ap-southeast-1
 awsAgwAz: ap-northeast-1a
 awsAgwAmi: ami-082cfa03978837a23
