--- a/lte/gateway/configs/pipelined.yml
+++ b/lte/gateway/configs/pipelined.yml
@@ -68,6 +68,7 @@ meter:
 
 enforcement:
   poll_interval: 2
+  enable_default_drop_flow_stats: false
   default_drop_flow_name: 'internal_default_drop_flow_rule'
 
 # Enable polling mobilityd to identify which subscriber sessions need to be
